#---------------------------------------------------------------------------------------------------
# CMake Build Configuration for the 2023 Advent of Code Programs
#---------------------------------------------------------------------------------------------------

cmake_minimum_required ( VERSION 3.1.0...3.27.0 )

project ( AOC LANGUAGES CXX )

# Set to C++23
set ( CMAKE_CXX_STANDARD          23 )
set ( CMAKE_CXX_STANDARD_REQUIRED ON )
set ( CMAKE_CXX_EXTENSIONS        OFF )

# Executables
add_executable(01a 01/01a.cpp )
add_executable(01b 01/01b.cpp )
add_executable(02a 02/02a.cpp )
add_executable(02b 02/02b.cpp )
add_executable(03a 03/03a.cpp )
add_executable(03b 03/03b.cpp )
add_executable(04a 04/04a.cpp )
add_executable(04b 04/04b.cpp )
add_executable(05a 05/05a.cpp )
add_executable(05b 05/05b.cpp )
add_executable(06a 06/06a.cpp )
add_executable(06b 06/06b.cpp )
add_executable(07a 07/07a.cpp )
add_executable(07b 07/07b.cpp )
add_executable(08a 08/08a.cpp )
add_executable(08b 08/08b.cpp )
add_executable(09a 09/09a.cpp )
add_executable(09b 09/09b.cpp )
add_executable(10a 10/10a.cpp )
add_executable(10b 10/10b.cpp )
add_executable(11a 11/11a.cpp )
add_executable(11b 11/11b.cpp )
add_executable(12a 12/12a.cpp )
add_executable(12b 12/12b.cpp )
add_executable(13a 13/13a.cpp )
add_executable(13b 13/13b.cpp )
add_executable(14a 14/14a.cpp )
add_executable(14b 14/14b.cpp )
add_executable(15a 15/15a.cpp )
add_executable(15b 15/15b.cpp )
add_executable(16a 16/16a.cpp )
add_executable(16b 16/16b.cpp )
add_executable(17a 17/17a.cpp )
add_executable(17b 17/17b.cpp )
add_executable(18a 18/18a.cpp )
add_executable(18b 18/18b.cpp )
add_executable(19a 19/19a.cpp )
add_executable(19b 19/19b.cpp )
add_executable(20a 20/20a.cpp )
add_executable(20b 20/20b.cpp )
add_executable(21a 21/21a.cpp )
add_executable(21b 21/21b.cpp )
add_executable(22a 22/22a.cpp )
add_executable(22b 22/22b.cpp )
add_executable(23a 23/23a.cpp )
add_executable(23b 23/23b.cpp )
add_executable(24a 24/24a.cpp )
add_executable(24b 24/24b.cpp )
add_executable(25a 25/25a.cpp )
add_executable(25b 25/25b.cpp )
